--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
-.subbody{
-    padding: 0 35% 0 35%;
+.subbody {
+    display:flex;
+    padding: 50px 35% 0 35%;
     justify-content: center;
     text-align: center;
+    flex-direction: column;
+}
+
+.col .icons {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    justify-content: space-between;
+    padding: 0 15px 0 15px;
 }
